--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -2,7 +2,7 @@
 
 /*
  +-----------------------------------------------------------------------+
- | SAMarkAsJunk configuration file                                       |
+ | MarkAsJunk2 configuration file                                        |
  |                                                                       |
  | This file is part of the RoundCube Webmail client                     |
  | Copyright (C) 2005-2009, RoundCube Dev. - Switzerland                 |
@@ -13,22 +13,22 @@
 */
 
 // Mark messages as read when reporting them as spam
-$rcmail_config['samarkasjunk_read_spam'] = true;
+$rcmail_config['markasjunk2_read_spam'] = true;
 
 // Mark messages as unread when reporting them as ham
-$rcmail_config['samarkasjunk_unread_ham'] = false;
+$rcmail_config['markasjunk2_unread_ham'] = false;
 
-// When reporting a message as ham, if the message is a Spamassassin report with the orginial message attached,
-// detach the orginial message and move that to the INBOX, deleteing the Spamassassin report
-$rcmail_config['samarkasjunk_detach_ham'] = true;
+// When reporting a message as ham, if the orginial message is attached (like with SpamAssassin reports),
+// detach the orginial message and move that to the INBOX, deleteing the spam report
+$rcmail_config['markasjunk2_detach_ham'] = true;
 
 // Add flag to messages marked as spam (flag will be removed when marking as ham)
 // If you do not want to use message flags set this to null
-$rcmail_config['samarkasjunk_spam_flag'] = 'Junk';
+$rcmail_config['markasjunk2_spam_flag'] = 'Junk';
 
 // Add flag to messages marked as ham (flag will be removed when marking as spam)
 // If you do not want to use message flags set this to null
-$rcmail_config['samarkasjunk_ham_flag'] = null;
+$rcmail_config['markasjunk2_ham_flag'] = null;
 
 // The command used to learn that a message is spam
 // The command can contain the following macros that will be expanded as follows:
@@ -37,14 +37,7 @@ $rcmail_config['samarkasjunk_ham_flag'] = null;
 //      %d is replaced with the domain part (after the @) of the username (from the session info)
 //      %f is replaced with the path to the message file (THIS SHOULD ALWAYS BE PRESENT)
 // If you do not want run any commands set this to null
-
-/*
- * example commands for learning message is spam
- *
-'/usr/bin/sa-learn --spam --username=%u %f' or
-'/usr/bin/sa-learn --spam --prefs-file=/var/mail/%d/%l/.spamassassin/user_prefs %f'
-*/
-$rcmail_config['samarkasjunk_spam_cmd'] = null;
+$rcmail_config['markasjunk2_spam_cmd'] = null;
 
 // The command used to learn that a message is ham
 // The command can contain the following macros that will be expanded as follows:
@@ -53,16 +46,9 @@ $rcmail_config['samarkasjunk_spam_cmd'] = null;
 //      %d is replaced with the domain part (after the @) of the username (from the session info)
 //      %f is replaced with the path to the message file (THIS SHOULD ALWAYS BE PRESENT)
 // If you do not want run any commands set this to null
-
-/*
- * example commands for learning message is spam
- *
-'/usr/bin/sa-learn --ham --username=%u %f' or
-'/usr/bin/sa-learn --ham --prefs-file=/var/mail/%d/%l/.spamassassin/user_prefs %f'
-*/
-$rcmail_config['samarkasjunk_ham_cmd'] = null;
+$rcmail_config['markasjunk2_ham_cmd'] = null;
 
 // Write output from spam/ham commands to the log for debug
-$rcmail_config['samarkasjunk_debug'] = false;
+$rcmail_config['markasjunk2_debug'] = false;
 
 ?>
