--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -38,6 +38,10 @@ $rcmail_config['markasjunk2_ham_flag'] = null;
 // Write output from spam/ham commands to the log for debug
 $rcmail_config['markasjunk2_debug'] = false;
 
+// Show icon on mailbox toolbar
+// The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
+$rcmail_config['markasjunk2_mb_toolbar'] = true;
+
 // cmd_learn Driver options
 // ------------------------
 // The command used to learn that a message is spam
