--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -13,7 +13,7 @@
 */
 
 // Learning driver
-// Use an external process auch as salearn to learn from spam/ham messages. Default: null.
+// Use an external process auch as sa-learn to learn from spam/ham messages. Default: null.
 // Current possibilities: 'cmd_learn', 'dir_learn', 'email_learn'
 $rcmail_config['markasjunk2_learning_driver'] = null;
 
