--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -1,16 +1,8 @@
 <?php
 
-/*
- +-----------------------------------------------------------------------+
- | MarkAsJunk2 configuration file                                        |
- |                                                                       |
- | This file is part of the RoundCube Webmail client                     |
- | Copyright (C) 2005-2009, RoundCube Dev. - Switzerland                 |
- | Licensed under the GNU GPL                                            |
- |                                                                       |
- +-----------------------------------------------------------------------+
-
-*/
+/**
+ * MarkAsJunk2 configuration file
+ */
 
 // Learning driver
 // Use an external process auch as sa-learn to learn from spam/ham messages. Default: null.
