--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -73,11 +73,21 @@ $rcmail_config['markasjunk2_filename'] = null;
 // email_learn Driver options
 // --------------------------
 // The email address that spam messages will be sent to
-// If you do not want run the command set this to null
+// The address can contain the following macros that will be expanded as follows:
+//      %u is replaced with the username (from the session info)
+//      %l is replaced with the local part of the username (if the username is an email address)
+//      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
+//      %i is replaced with the email address from the user's default identity
+// If you do not want to send an email set this to null
 $rcmail_config['markasjunk2_email_spam'] = null;
 
 // The email address that ham messages will be sent to
-// If you do not want run the command set this to null
+// The address can contain the following macros that will be expanded as follows:
+//      %u is replaced with the username (from the session info)
+//      %l is replaced with the local part of the username (if the username is an email address)
+//      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
+//      %i is replaced with the email address from the user's default identity
+// If you do not want to send an email set this to null
 $rcmail_config['markasjunk2_email_ham'] = null;
 
 // Should the spam/ham message be sent as an attachment
