--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -9,17 +9,22 @@
 // Please see the README for more information
 $rcmail_config['markasjunk2_learning_driver'] = null;
 
+// Ham mailbox
+// Mailbox messages should be moved to when they are marked as ham. null = INBOX
+// set to FALSE to disable message moving
+$rcmail_config['markasjunk2_ham_mbox'] = null;
+
+// Spam mailbox
+// Mailbox messages should be moved to when they are marked as spam.
+// null = the mailbox assigned as the spam folder in Roundcube settins
+// set to FALSE to disable message moving
+$rcmail_config['markasjunk2_spam_mbox'] = null;
+
 // Mark messages as read when reporting them as spam
 $rcmail_config['markasjunk2_read_spam'] = true;
 
 // Mark messages as unread when reporting them as ham
 $rcmail_config['markasjunk2_unread_ham'] = false;
-
-// Move messages to junk folder when reporting them as spam
-$rcmail_config['markasjunk2_move_spam'] = true;
-
-// Move messages to inbox folder when reporting them as ham
-$rcmail_config['markasjunk2_move_ham'] = true;
 
 // Add flag to messages marked as spam (flag will be removed when marking as ham)
 // If you do not want to use message flags set this to null
