rename default skin to classic (c40419bdfe)

--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
 		<email>roundcube@tehinterweb.co.uk</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-03-17</date>
-	<time>10:53:28</time>
+	<date>2012-07-30</date>
+	<time>18:10:28</time>
 	<version>
 		<release>1.5</release>
 		<api>1.5</api>
@@ -63,12 +63,12 @@
 			<file name="localization/ru_RU.inc" role="data"/>
 			<file name="localization/tr_TR.inc" role="data"/>
 			<file name="localization/zh_TW.inc" role="data"/>
-			<file name="skins/default/ie6hacks.css" role="data"/>
-			<file name="skins/default/mail_toolbar.gif" role="data"/>
-			<file name="skins/default/mail_toolbar.png" role="data"/>
-			<file name="skins/default/markasjunk2.css" role="data"/>
-			<file name="skins/default/messageactions.gif" role="data"/>
-			<file name="skins/default/messageactions.png" role="data"/>
+			<file name="skins/classic/ie6hacks.css" role="data"/>
+			<file name="skins/classic/mail_toolbar.gif" role="data"/>
+			<file name="skins/classic/mail_toolbar.png" role="data"/>
+			<file name="skins/classic/markasjunk2.css" role="data"/>
+			<file name="skins/classic/messageactions.gif" role="data"/>
+			<file name="skins/classic/messageactions.png" role="data"/>
 			<file name="skins/larry/ie6hacks.css" role="data"/>
 			<file name="skins/larry/mail_toolbar.png" role="data"/>
 			<file name="skins/larry/markasjunk2.css" role="data"/>
