--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
 		<email>roundcube@tehinterweb.co.uk</email>
 		<active>yes</active>
 	</lead>
-	<date>2012-10-20</date>
-	<time>08:20:49</time>
+	<date>2013-02-24</date>
+	<time>10:16:53</time>
 	<version>
 		<release>1.6</release>
 		<api>1.6</api>
@@ -37,7 +37,7 @@
 			</file>
 			<file name="config.inc.php.dist" role="data"/>
 			<file name="CHANGELOG" role="data"/>
-			<file name="README" role="data"/>
+			<file name="README.md" role="data"/>
 			<file name="drivers/cmd_learn.php" role="php"/>
 			<file name="drivers/dir_learn.php" role="php"/>
 			<file name="drivers/edit_headers.php" role="php"/>
