--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -7,49 +7,49 @@
 // Learning driver
 // Use an external process such as sa-learn to learn from spam/ham messages. Default: null.
 // Please see the README for more information
-$rcmail_config['markasjunk2_learning_driver'] = null;
+$config['markasjunk2_learning_driver'] = null;
 
 // Ham mailbox
 // Mailbox messages should be moved to when they are marked as ham. null = INBOX
 // set to FALSE to disable message moving
-$rcmail_config['markasjunk2_ham_mbox'] = null;
+$config['markasjunk2_ham_mbox'] = null;
 
 // Spam mailbox
 // Mailbox messages should be moved to when they are marked as spam.
 // null = the mailbox assigned as the spam folder in Roundcube settings
 // set to FALSE to disable message moving
-$rcmail_config['markasjunk2_spam_mbox'] = null;
+$config['markasjunk2_spam_mbox'] = null;
 
 // Mark messages as read when reporting them as spam
-$rcmail_config['markasjunk2_read_spam'] = true;
+$config['markasjunk2_read_spam'] = true;
 
 // Mark messages as unread when reporting them as ham
-$rcmail_config['markasjunk2_unread_ham'] = false;
+$config['markasjunk2_unread_ham'] = false;
 
 // Add flag to messages marked as spam (flag will be removed when marking as ham)
 // If you do not want to use message flags set this to null
-$rcmail_config['markasjunk2_spam_flag'] = 'Junk';
+$config['markasjunk2_spam_flag'] = 'Junk';
 
 // Add flag to messages marked as ham (flag will be removed when marking as spam)
 // If you do not want to use message flags set this to null
-$rcmail_config['markasjunk2_ham_flag'] = null;
+$config['markasjunk2_ham_flag'] = null;
 
 // Write output from spam/ham commands to the log for debug
-$rcmail_config['markasjunk2_debug'] = false;
+$config['markasjunk2_debug'] = false;
 
 // Show icon on mailbox toolbar
 // The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
-$rcmail_config['markasjunk2_mb_toolbar'] = true;
+$config['markasjunk2_mb_toolbar'] = true;
 
 // Show icon on compose toolbar
 // The mark as spam/ham icon can either be displayed on the toolbar or as part of the mark messages menu
-$rcmail_config['markasjunk2_cp_toolbar'] = true;
+$config['markasjunk2_cp_toolbar'] = true;
 
 // Learn any message moved to the spam mailbox as spam (not just when the button is pressed)
-$rcmail_config['markasjunk2_move_spam'] = false;
+$config['markasjunk2_move_spam'] = false;
 
 // Learn any message moved from the spam mailbox to the ham mailbox as ham (not just when the button is pressed)
-$rcmail_config['markasjunk2_move_ham'] = false;
+$config['markasjunk2_move_ham'] = false;
 
 // cmd_learn Driver options
 // ------------------------
@@ -62,7 +62,7 @@ $rcmail_config['markasjunk2_move_ham'] = false;
 //      %xds is replaced with the X-DSPAM-Signature header
 //      %f is replaced with the path to the message file
 // If you do not want run the command set this to null
-$rcmail_config['markasjunk2_spam_cmd'] = null;
+$config['markasjunk2_spam_cmd'] = null;
 
 // The command used to learn that a message is ham
 // The command can contain the following macros that will be expanded as follows:
@@ -73,15 +73,15 @@ $rcmail_config['markasjunk2_spam_cmd'] = null;
 //      %xds is replaced with the X-DSPAM-Signature header
 //      %f is replaced with the path to the message file
 // If you do not want run the command set this to null
-$rcmail_config['markasjunk2_ham_cmd'] = null;
+$config['markasjunk2_ham_cmd'] = null;
 
 // dir_learn Driver options
 // ------------------------
 // The full path of the directory used to store spam (must be writable by webserver)
-$rcmail_config['markasjunk2_spam_dir'] = null;
+$config['markasjunk2_spam_dir'] = null;
 
 // The full path of the directory used to store ham (must be writable by webserver)
-$rcmail_config['markasjunk2_ham_dir'] = null;
+$config['markasjunk2_ham_dir'] = null;
 
 // The filename prefix
 // The filename can contain the following macros that will be expanded as follows:
@@ -89,7 +89,7 @@ $rcmail_config['markasjunk2_ham_dir'] = null;
 //      %l is replaced with the local part of the username (if the username is an email address)
 //      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
 //      %t is replaced with the type of message (spam/ham)
-$rcmail_config['markasjunk2_filename'] = null;
+$config['markasjunk2_filename'] = null;
 
 // email_learn Driver options
 // --------------------------
@@ -100,7 +100,7 @@ $rcmail_config['markasjunk2_filename'] = null;
 //      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
 //      %i is replaced with the email address from the user's default identity
 // If you do not want to send an email set this to null
-$rcmail_config['markasjunk2_email_spam'] = null;
+$config['markasjunk2_email_spam'] = null;
 
 // The email address that ham messages will be sent to
 // The address can contain the following macros that will be expanded as follows:
@@ -109,10 +109,10 @@ $rcmail_config['markasjunk2_email_spam'] = null;
 //      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
 //      %i is replaced with the email address from the user's default identity
 // If you do not want to send an email set this to null
-$rcmail_config['markasjunk2_email_ham'] = null;
+$config['markasjunk2_email_ham'] = null;
 
 // Should the spam/ham message be sent as an attachment
-$rcmail_config['markasjunk2_email_attach'] = true;
+$config['markasjunk2_email_attach'] = true;
 
 // The email subject (when sending as attachment)
 // The subject can contain the following macros that will be expanded as follows:
@@ -120,12 +120,12 @@ $rcmail_config['markasjunk2_email_attach'] = true;
 //      %l is replaced with the local part of the username (if the username is an email address)
 //      %d is replaced with the domain part of the username (if the username is an email address or default mail domain if not)
 //      %t is replaced with the type of message (spam/ham)
-$rcmail_config['markasjunk2_email_subject'] = 'learn this message as %t';
+$config['markasjunk2_email_subject'] = 'learn this message as %t';
 
 // sa_blacklist Driver options
 // ---------------------------
 // Path to SAUserPrefs config file
-$rcmail_config['markasjunk2_sauserprefs_config'] = '../sauserprefs/config.inc.php';
+$config['markasjunk2_sauserprefs_config'] = '../sauserprefs/config.inc.php';
 
 // edit_headers Driver options
 // ---------------------------
@@ -134,7 +134,7 @@ $rcmail_config['markasjunk2_sauserprefs_config'] = '../sauserprefs/config.inc.ph
 // WARNING: Be sure to match the entire header line, including the name of the header, also use ^ and $ and the 'm' flag
 // see the README for an example
 // TEST CAREFULLY BEFORE USE ON REAL MESSAGES
-$rcmail_config['markasjunk2_spam_patterns'] = array(
+$config['markasjunk2_spam_patterns'] = array(
 												'patterns' => array(),
 												'replacements' => array()
 												);
@@ -144,7 +144,7 @@ $rcmail_config['markasjunk2_spam_patterns'] = array(
 // WARNING: Be sure to match the entire header line, including the name of the header, also use ^ and $ and the 'm' flag
 // see the README for an example
 // TEST CAREFULLY BEFORE USE ON REAL MESSAGES
-$rcmail_config['markasjunk2_ham_patterns'] = array(
+$config['markasjunk2_ham_patterns'] = array(
 												'patterns' => array(),
 												'replacements' => array()
 												);
