--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "homepage": "http://github.com/JohnDoh/Roundcube-Plugin-Mark-as-Junk-2/",
   "license": "GPL-3.0",
   "type": "roundcube-plugin",
+  "version": "1.8.2",
   "authors": [
     {
       "name": "Philip Weir",
