Add "secondary" and "ambivalent" spam folders
For automated systems that move spam around (like a spamassassin + sieve
setup), there may be several folders that are for spam. For example, a
folder for spam classified by spamassassin with high confidence, one for
low confidence, and one for mails marked / moved by the user's mail
client (like the adaptive spam filter in thunderbird).

This commit adds config options to configure these folders and updates
the hide/unhide logic for the mark as spam / mark as not spam buttons
accordingly: The secondary spam folders show the "Not Junk" button,
while "suspicious" folders show both buttons.

--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -20,6 +20,17 @@ $config['markasjunk2_ham_mbox'] = null;
 // set to FALSE to disable message moving
 $config['markasjunk2_spam_mbox'] = null;
 
+// Secondary Spam mailboxes
+// If there are other systems (like spamassassin) that move spam around,
+// set additional mbox(es) here to treat as spam folder.
+$config['markasjunk2_secondary_spam_mbox'] = null;
+
+// Suspicious mail mailbox
+// If there are other systems (like spamassassin) that move spam around,
+// set additional mbox(es) here to treat as "suspicious" folder -
+// both "mark as spam" and "mark as not spam" buttons will be shown
+$config['markasjunk2_suspicious_mbox'] = null;
+
 // Mark messages as read when reporting them as spam
 $config['markasjunk2_read_spam'] = true;
 
