--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "homepage": "http://github.com/JohnDoh/Roundcube-Plugin-Mark-as-Junk-2/",
   "license": "GPL-3.0",
   "type": "roundcube-plugin",
-  "version": "1.10",
+  "version": "1.11",
   "authors": [
     {
       "name": "Philip Weir",
@@ -25,7 +25,7 @@
   },
   "extra": {
     "roundcube": {
-      "min-version": "1.1-beta"
+      "min-version": "1.3"
     }
   }
 }
